src/styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: 0;
  text-decoration: none;
  list-style: none;
  font-family: sans-serif;
  scroll-behavior: smooth;
  transition: all 0.3s ease-in-out;
  font-family: "Inter", sans-serif;
}
body {
  -webkit-font-smoothing: antialiased;
  background: #FCFCFA;
}
body,
input,
button,
textarea {
  font-family: "Inter", sans-serif;
}
button,
a {
  cursor: pointer;
}

body.modal-open {
  overflow: hidden;
}

